skills section added and designs for all screen sizes updated

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!-- custom css -->
     <link rel="stylesheet" href="./style.css" />
 
+    <!-- media-queries css -->
+    <link rel="stylesheet" href="./media-queries.css" />
+
     <title>Portfolio-Ranjit</title>
   </head>
   <body>
@@ -34,7 +37,7 @@
             <a class="navbar-brand name-tag" href="#">R. Acharya</a>
             <div>
               <span class="line"><</span>
-              <span class="skill">frontend developer</span>
+              <span class="position">frontend developer</span>
               <span class="line">/></span>
             </div>
           </div>
@@ -68,7 +71,7 @@
                 class="navbar-nav align-items-center justify-content-end flex-grow-1 pe-3"
               >
                 <a class="nav-link" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Skills</a>
+                <a class="nav-link" href="#skills--section">Skills</a>
                 <a class="nav-link" href="#">Projects</a>
                 <a class="nav-link" href="#">About</a>
                 <a class="nav-link" href="#">Contact</a>
@@ -81,9 +84,9 @@
       <section class="hero-section">
         <div class="container-fluid">
           <div class="hero-content">
-            <h1 class="hero-heading-primary">Hey, I'm Ranjit Acharya</h1>
-            <div class="hero-heading-info">
-              <p class="hero-text-primary">
+            <h1 class="heading-primary">Hey, I'm Ranjit Acharya</h1>
+            <div class="heading-info">
+              <p class="text-primary">
                 I specialize in frontend web development with a strong focus on
                 crafting the user interfaces and interactive components of
                 websites and web applications. My work directly contributes to
@@ -194,6 +197,97 @@
           </div>
           <div class="hero-mouse-scroll-cont">
             <div class="mouse"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="skills-section" id="skills--section">
+        <div class="container-fluid">
+          <div class="skills-content">
+            <h1 class="heading-primary heading-skills">Skills</h1>
+
+            <div class="heading-info d-flex justify-content-center">
+              <p class="d-flex align-items-center text-primary text-skills">
+                Welcome to my skills section, where abilities meet action. These
+                skills are the building blocks of my professional journey,
+                reflecting my commitment to excellence. Please feel free to
+                explore and see how these skills translate into real-world
+                results.
+              </p>
+            </div>
+
+            <div class="skills d-grid">
+              <div
+                class="skill-container d-flex align-items-center flex-column"
+              >
+                <img
+                  src="./assets/html5.svg"
+                  alt="ranjit skill html5"
+                  class="skill"
+                />
+                <p class="img-tag">html 5</p>
+              </div>
+              <div
+                class="skill-container d-flex align-items-center flex-column"
+              >
+                <img
+                  src="./assets/css3.svg"
+                  alt="ranjit skill css3"
+                  class="skill"
+                />
+                <p class="img-tag">css 3</p>
+              </div>
+              <div
+                class="skill-container d-flex align-items-center flex-column"
+              >
+                <img
+                  src="./assets/js01.svg"
+                  alt="ranjit skill js"
+                  class="skill"
+                />
+                <p class="img-tag">js</p>
+              </div>
+              <div
+                class="skill-container d-flex align-items-center flex-column"
+              >
+                <img
+                  src="./assets/bootstrap.svg"
+                  alt="ranjit skill bootstrap"
+                  class="skill"
+                />
+                <p class="img-tag">bootstrap</p>
+              </div>
+              <div
+                class="skill-container d-flex align-items-center flex-column"
+              >
+                <img
+                  src="./assets/react.svg"
+                  alt="ranjit skill react"
+                  class="skill"
+                />
+                <p class="img-tag">react</p>
+              </div>
+              <div
+                class="skill-container d-flex align-items-center flex-column"
+              >
+                <img
+                  src="./assets/github.svg"
+                  alt="ranjit skill github"
+                  class="skill"
+                />
+                <p class="img-tag">github</p>
+              </div>
+              <div
+                class="skill-container d-flex align-items-center flex-column"
+              >
+                <img
+                  src="./assets/figma.svg"
+                  alt="ranjit skill figma"
+                  class="skill"
+                />
+                <p class="img-tag">figma</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
