--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="hero-content">
             <h1 class="heading-primary">Hey, I'm Ranjit Acharya</h1>
             <div class="heading-info">
-              <p class="text-primary">
+              <p class="text--primary">
                 I specialize in frontend web development with a strong focus on
                 crafting the user interfaces and interactive components of
                 websites and web applications. My work directly contributes to
@@ -207,7 +207,7 @@
             <h1 class="heading-primary heading-skills">Skills</h1>
 
             <div class="heading-info d-flex justify-content-center">
-              <p class="d-flex align-items-center text-primary text-skills">
+              <p class="d-flex align-items-center text--primary text-skills">
                 Welcome to my skills section, where abilities meet action. These
                 skills are the building blocks of my professional journey,
                 reflecting my commitment to excellence. Please feel free to
