completed about, contact and footer sections and implemented designs for all screen types

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
               >
                 <a class="nav-link" aria-current="page" href="#">Home</a>
                 <a class="nav-link" href="#skills--section">Skills</a>
-                <a class="nav-link" href="#">Projects</a>
-                <a class="nav-link" href="#">About</a>
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#projects--section">Projects</a>
+                <a class="nav-link" href="#about--section">About</a>
+                <a class="nav-link" href="#contact--section">Contact</a>
               </div>
             </div>
           </div>
@@ -84,7 +84,7 @@
       <!-- end navbar -->
 
       <!-- hero-section / home -->
-      <section class="hero-section">
+      <section id="hero--section" class="hero-section">
         <div class="container-fluid">
           <div class="hero-content">
             <h1 class="heading-primary">Hey, I'm Ranjit Acharya</h1>
@@ -513,7 +513,293 @@
       <!-- end projects-section -->
 
       <!-- about-section -->
+      <section class="about-section" id="about--section">
+        <div class="container-fluid">
+          <div class="about-content">
+            <h1 class="heading-primary heading-secondary">About me</h1>
+
+            <div class="heading-info d-flex justify-content-center">
+              <p class="d-flex align-items-center text--primary text-secondary">
+                Welcome to my about me section, where you'll find more
+                information about me.
+              </p>
+            </div>
+
+            <div class="abouts d-grid">
+              <div class="about-me-desc">
+                <div class="d-grid about-me-firt-sec">
+                  <div>
+                    <h5 class="about-me-title">Get to know me!</h5>
+                    <p class="text--primary text-secondary about--me-text">
+                      I'm a passionate and creative frontend developer,
+                      dedicated to pushing all the boundaries. With a strong
+                      foundation in frontend technologies, I thrive on solving
+                      complex problems and turning ideas into tangible results.
+                    </p>
+                  </div>
+                  <div
+                    class="about-me-img d-flex justify-content-center align-items-center"
+                  >
+                    <img
+                      src="./assets/about me image.png"
+                      alt="about me image"
+                    />
+                  </div>
+                </div>
+                <p class="text--primary text-secondary about--me-text">
+                  My journey in web development began 2014, and since then, I've
+                  had the privilege of working with one of the tech company
+                  named Harati Computer Services Pty Ltd, where I played a key
+                  role in developing user-friendly interfaces and optimizing
+                  website performance.
+                </p>
+                <p class="text--primary text-secondary about--me-text">
+                  I believe in the power of collaboration and have worked with a
+                  diverse range of clients and teams, each experience
+                  contributing to my growth and skills. I approach every project
+                  with an insatiable curiosity and a commitment to delivering
+                  high-quality work. I'm known for my expertise in responsive
+                  web design and interactive user interfaces, which have enabled
+                  me to significantly increase user engagement and conversions
+                  for my clients.
+                </p>
+                <p class="text--primary text-secondary about--me-text">
+                  When I'm not immersed in my work, you can find me hiking in
+                  the beautiful hills and mountains, which inspire and enrich my
+                  creative thinking. I'm also passionate about volunteering with
+                  local organizations that support underprivileged youth by
+                  teaching them coding skills, and I believe in giving back to
+                  the community that has given me so much.
+                </p>
+                <p class="text--primary text-secondary about--me-text">
+                  Whether you're here to explore my portfolio, collaborate on a
+                  project, or just say hello, I'm excited to connect and share
+                  in the journey of creativity and innovation. Let's create
+                  something extraordinary together. Feel free to reach out to me
+                  through my
+                  <a
+                    href="https://www.linkedin.com/in/ranjit-acharya/"
+                    rel="noreferrer"
+                    target="_blank"
+                  >
+                    <span class="fw-bold">LinkedIn</span>
+                  </a>
+                  or send me an email at
+                  <a href="mailto:achranjit013@gmail.com">
+                    <span class="fw-bold">achranjit013@gmail.com</span> </a
+                  >. I look forward to connecting with you!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- end about-section -->
+
+      <!-- contact-section -->
+      <section class="contact-section" id="contact--section">
+        <div class="container-fluid">
+          <div class="contact-content">
+            <h1 class="heading-primary heading-secondary">Contact me</h1>
+
+            <div class="heading-info d-flex justify-content-center">
+              <p class="d-flex align-items-center text--primary text-secondary">
+                Please feel free to contact me by clicking one of the following
+                links
+              </p>
+            </div>
+
+            <div class="contacts d-grid">
+              <div
+                class="contacts-socials d-flex justify-content-center align-items-center"
+              >
+                <div class="hero-social">
+                  <a
+                    href="https://www.linkedin.com/in/ranjit-acharya/"
+                    class="hero-social-icon-link"
+                    rel="noreferrer"
+                    target="_blank"
+                  >
+                    <img
+                      src="./assets/linkedIn-circle.svg"
+                      alt="Ranjit Acharya Linkedin Profile"
+                      class="hero-social-icon"
+                    />
+                  </a>
+                </div>
+                <div class="hero-social">
+                  <a
+                    href="https://github.com/achranjit013"
+                    class="hero-social-icon-link"
+                    rel="noreferrer"
+                    target="_blank"
+                  >
+                    <img
+                      src="./assets/github-circle.svg"
+                      alt="Ranjit Acharya Github Profile"
+                      class="hero-social-icon"
+                    />
+                  </a>
+                </div>
+                <div class="hero-social">
+                  <a
+                    href="https://www.facebook.com/ranzeet.acharya/"
+                    class="hero-social-icon-link"
+                    rel="noreferrer"
+                    target="_blank"
+                  >
+                    <img
+                      src="./assets/facebook-circle.svg"
+                      alt="Ranjit Acharya Facebook Profile"
+                      class="hero-social-icon"
+                    />
+                  </a>
+                </div>
+                <div class="hero-social">
+                  <a
+                    href="https://www.facebook.com/ranzeet.acharya/"
+                    class="hero-social-icon-link"
+                    rel="noreferrer"
+                    target="_blank"
+                  >
+                    <img
+                      src="./assets/instagram-circle.svg"
+                      alt="Ranjit Acharya Instagram Profile"
+                      class="hero-social-icon"
+                    />
+                  </a>
+                </div>
+              </div>
+
+              <p
+                class="text--primary text-secondary d-flex justify-content-center align-items-center"
+              >
+                OR
+              </p>
+
+              <a href="mailto:achranjit013@gmail.com">
+                <div
+                  class="contacts-email text--primary text-secondary d-flex justify-content-center align-items-center"
+                >
+                  <span class="fw-bold">achranjit013@gmail.com</span>
+                  <div
+                    class="send-icon d-flex justify-content-center align-items-center fw-bold"
+                  >
+                    <i class="fa-solid fa-paper-plane"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end contact-section -->
+
+      <!-- footer-section -->
+      <footer class="footer-section" id="footer--section">
+        <div class="container-fluid">
+          <div class="footer-content">
+            <div class="footer d-grid">
+              <div class="footer-left">
+                <h3 class="heading-footer">Ranjit Acharya</h3>
+                <div class="heading-info">
+                  <p class="text--primary text--footer">
+                    Frontend web developer with a strong focus on crafting the
+                    user interfaces and interactive components of websites and
+                    web applications.
+                  </p>
+                </div>
+              </div>
+              <div class="footer-right">
+                <div class="footer-right-nav">
+                  <h3 class="heading-footer">Navs</h3>
+                  <div class="d-flex footer-right-links">
+                    <a class="nav-link-footer" href="#">Home</a>
+                    <a class="nav-link-footer" href="#skills--section"
+                      >Skills</a
+                    >
+                    <a class="nav-link-footer" href="#projects--section"
+                      >Projects</a
+                    >
+                    <a class="nav-link-footer" href="#about--section">About</a>
+                    <a class="nav-link-footer" href="#contact--section"
+                      >Contact</a
+                    >
+                  </div>
+                </div>
+                <div class="footer-right-social">
+                  <h3 class="heading-footer">Socials</h3>
+                  <div
+                    class="contacts-socials footer-right-links d-flex justify-content-center align-items-center"
+                  >
+                    <div class="hero-social">
+                      <a
+                        href="https://www.linkedin.com/in/ranjit-acharya/"
+                        class="hero-social-icon-link"
+                        rel="noreferrer"
+                        target="_blank"
+                      >
+                        <img
+                          src="./assets/linkedIn-circle.svg"
+                          alt="Ranjit Acharya Linkedin Profile"
+                          class="hero-social-icon"
+                        />
+                      </a>
+                    </div>
+                    <div class="hero-social">
+                      <a
+                        href="https://github.com/achranjit013"
+                        class="hero-social-icon-link"
+                        rel="noreferrer"
+                        target="_blank"
+                      >
+                        <img
+                          src="./assets/github-circle.svg"
+                          alt="Ranjit Acharya Github Profile"
+                          class="hero-social-icon"
+                        />
+                      </a>
+                    </div>
+                    <div class="hero-social">
+                      <a
+                        href="https://www.facebook.com/ranzeet.acharya/"
+                        class="hero-social-icon-link"
+                        rel="noreferrer"
+                        target="_blank"
+                      >
+                        <img
+                          src="./assets/facebook-circle.svg"
+                          alt="Ranjit Acharya Facebook Profile"
+                          class="hero-social-icon"
+                        />
+                      </a>
+                    </div>
+                    <div class="hero-social">
+                      <a
+                        href="https://www.facebook.com/ranzeet.acharya/"
+                        class="hero-social-icon-link"
+                        rel="noreferrer"
+                        target="_blank"
+                      >
+                        <img
+                          src="./assets/instagram-circle.svg"
+                          alt="Ranjit Acharya Instagram Profile"
+                          class="hero-social-icon"
+                        />
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <p class="text-center fw-bold text--copy-right">
+              &copy; All Rights Reserved. Made by R. Acharya
+            </p>
+          </div>
+        </div>
+      </footer>
+      <!-- end footer-section -->
     </div>
 
     <!-- bootstrap script -->
