fixed linkedin image icon bug which was not displaying in live

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 target="_blank"
               >
                 <img
-                  src="./assets/linkedIn-circle.svg"
+                  src="./assets/linkedin-circle.svg"
                   alt="Ranjit Acharya Linkedin Profile"
                   class="hero-social-icon"
                 />
