fixed the bug - linkedin image icon was not displaying in live

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               >
                 <img
                   src="./assets/linkedin-circle.svg"
-                  alt="Ranjit Acharya Linkedin Profile"
+                  alt="Ranjit Acharya LinkedIn Profile"
                   class="hero-social-icon"
                 />
               </a>
