--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
                         target="_blank"
                       >
                         <img
-                          src="./assets/linkedIn-circle.svg"
+                          src="./assets/linkedin-circle.svg"
                           alt="Ranjit Acharya Linkedin Profile"
                           class="hero-social-icon"
                         />
